--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Birlik</title>
-    <link rel="icon" href="public/birlik.ico">
+    <title>Baige</title>
+    <!-- <link rel="icon" href="public/birlik.ico"> -->
   </head>
   <body>
     <div id="root"></div>
